@@ -1,3 +1,4 @@
-# PySNMP, version 4
-majorVersionId = '4'
-version = (4, 2, 1)
+# http://www.python.org/dev/peps/pep-0396/
+__version__ = '4.2.3'
+# backward compatibility
+version = tuple(__version__.split('.'))
